//
//  UITestAccessibilityIdentifiers.swift
//  WeatherLogger
//
//  Created by Radim Langer on 20/10/2019.
//  Copyright © 2019 Accenture. All rights reserved.
//

enum AccessibilityIdentifier: String {
    case weatherDetaiViewDeleteButton
    case currentWeatherCell
    case currentWeatherViewSaveButton
}
